--- a/src/components/NotesContainer.css
+++ b/src/components/NotesContainer.css
@@ -1,6 +1,17 @@
 .notes-container {
 	margin: 32px auto auto;
 	max-width: 1024px;
+}
+
+.pinned-notes-container {
+	margin: 24px auto 24px auto;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(150px, 300px));
+	gap: 16px;
+}
+
+.other-notes-container {
+	margin: 24px auto auto;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(150px, 300px));
 	gap: 16px;
