--- a/src/components/AddNote.css
+++ b/src/components/AddNote.css
@@ -88,6 +88,7 @@
 .color-picker {
 	position: relative;
 	margin-right: 16px;
+	cursor: pointer;
 }
 
 .palette {
@@ -134,6 +135,7 @@
 
 .label-selector {
 	position: relative;
+	cursor: pointer;
 }
 
 .label-selector ul {
