--- a/src/components/NoteCard.css
+++ b/src/components/NoteCard.css
@@ -1,8 +1,11 @@
 .note-card {
-	height: 255px;
+	height: 278px;
 	padding: 16px;
 	border-radius: 8px;
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .note-card button {
@@ -19,7 +22,6 @@
 
 .note-buttons {
 	width: 100%;
-	padding: 8px 0 0 0;
 	display: flex;
 	justify-content: space-between;
 }
@@ -38,7 +40,7 @@
 }
 
 .tags {
-	padding: 6px 0 12px 0;
+	padding: 6px 0 6px 0;
 	display: flex;
 	flex-flow: row nowrap;
 	overflow-x: scroll;
