--- a/src/components/TagChip.css
+++ b/src/components/TagChip.css
@@ -2,13 +2,11 @@
 	padding: 2px 8px;
 	margin-right: 2px;
 	border-radius: 20px;
-	background: #d8d8d8;
-	opacity: 0.7;
+	background: rgba(216, 216, 216, 0.7);
 	display: inline-block;
 }
 
 .tag-chip span {
-	opacity: 1;
 	font-size: 11px;
 	margin-right: 4px;
 	line-height: 12px;
