--- a/src/components/NoteCard.css
+++ b/src/components/NoteCard.css
@@ -14,11 +14,11 @@
 	border: none;
 }
 
-.pin-button {
+/* .pin-button {
 	position: absolute;
 	top: 16px;
 	right: 16px;
-}
+} */
 
 .note-buttons {
 	width: 100%;
@@ -33,6 +33,9 @@
 .title {
 	font-weight: 500;
 	margin-bottom: 12px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .text {
@@ -41,6 +44,7 @@
 	overflow-y: scroll;
 	width: 100%;
 	overflow-wrap: break-word;
+	white-space: pre-wrap;
 }
 
 .tags {
@@ -72,4 +76,14 @@
 .note-card:hover {
 	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
 	border: none;
+}
+
+@media screen and (max-width: 460px) {
+	.note-card {
+		height: auto;
+	}
+	.text {
+		height: auto;
+		max-height: 136px;
+	}
 }
