--- a/src/components/AddNote.css
+++ b/src/components/AddNote.css
@@ -152,6 +152,7 @@
 	text-align: left;
 	padding: 4px;
 	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+	z-index: 100;
 }
 
 .label-selector:hover > ul {
