--- a/src/components/NotesContainer.css
+++ b/src/components/NotesContainer.css
@@ -53,7 +53,7 @@
   .pinned-notes-container {
     margin: 24px auto 24px auto;
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, minmax(150px, 428px));
     gap: 16px;
   }
 
