--- a/src/components/NotesContainer.css
+++ b/src/components/NotesContainer.css
@@ -60,7 +60,7 @@
   .other-notes-container {
     margin: 24px auto auto;
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, minmax(150px, 428px));
     gap: 16px;
   }
 }
